fix minorbug add disclaimer in problem's added by can edit/add photo in edit detail problems rework All problems quick filters
